--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -3,7 +3,9 @@
 
 
 {% block content %}
-<div class="container-fluid" style="padding-top: 80px;">{% include 'forum/carousel.html' %}</div>
+<div class="container-fluid" style="padding-top: 80px;">
+    {% include 'home/carousel.html' %}
+</div>
 <div class="container">
     <div class="divider-new">
         <h2 class="h2-responsive">Why join SEA?</h2>
