--- a/templates/home/home_member.html
+++ b/templates/home/home_member.html
@@ -13,10 +13,10 @@
     	<div class="row">
     		<div class="col-sm-8">
             {# include 'forum/statusupdate.html' #}
-            {% include 'forum/latest_update.html' %}    
+            {% include 'home/latest_update.html' %}    
             </div>
             <div class="col-sm-4">
-                {% include 'forum/badge.html' %}
+                {% include 'home/badge.html' %}
             </div>            
             </div>
         </div>
