--- a/templates/forum/start.html
+++ b/templates/forum/start.html
@@ -1,7 +1,9 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}New Topic{% endblock %} {% block pagecss %} {% endblock %} {% block content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}New Topic{% endblock %} 
+{% block pagecss %} {% endblock %} 
 
 
 
+{% block content %}
 <div class="container-fluid" style="padding-top: 100px;"></div>
 <div class="container-fluid">
     <div class="row">
