--- a/templates/home/latest_update.html
+++ b/templates/home/latest_update.html
@@ -8,7 +8,7 @@
 		<div class="post">
 			<div>
 				<div class="post-title">
-					<a href="{% url 'discussion' post.id %}"> <!-- {# url 'discussion' post.id #} {{ post.get_absolute_url }}--> 
+					<a href="{{ post.get_absolute_url }}"> <!-- {# url 'discussion' post.id #} {{ post.get_absolute_url }} {# url 'forum:discussion' post.id post_slug #}--> 
 						<h2>{{ post.title }}</h2>
 					</a>
 				</div>
