updated home member page, discussion page and profile with absolute url

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
     <link href="{% static 'css/mdb.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
+    {% block pagecss %}
+    {% endblock %}
 
     <style>
         /* Carousel and pictures */
