--- a/templates/home/latest_update.html
+++ b/templates/home/latest_update.html
@@ -1,4 +1,4 @@
-{# load humanize #}
+{% load humanize %}
 <div class="container-fluid">
 	<!-- <form id="defaults">
 		<input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
@@ -9,20 +9,21 @@
 			<div>
 				<div class="post-title">
 					<a href="{{ post.get_absolute_url }}"> <!-- {# url 'discussion' post.id #} {{ post.get_absolute_url }} {# url 'forum:discussion' post.id post_slug #}--> 
-						<h2>{{ post.title }}</h2>
+						<h4 class="h4-responsive">{{ post.title }}</h4>
 					</a>
 				</div>
 				<div class="post-line-2">
 					<div class="post-score">
-						by {{ post.author }} |
-						{{ post.score }} points |
-						{{ post.num_comments }} comment{{ post.num_comments|pluralize }}
-						| {{ post.submission_time }}
-						{% include "forum/snippet/post_vote_control.html" with obj_type='posts' obj=post %}
+						by {{ post.author }} .
+						{{ post.score }} points .
+						<a><i class="fa fa-comments-o"></i> {{ post.num_comments }}
+						. <i class="fa fa-clock-o"></i> {{ post.submission_time | naturaltime }}
+						{# include "forum/snippet/post_vote_control.html" with obj_type='posts' obj=post #}
 						{% if request.user.is_staff %}
-						| <a href="{% url 'admin:forum_post_change' post.id %}">admin</a>
+						. <a href="{% url 'admin:forum_post_change' post.id %}">admin</a>
 						{% endif %}
 					</div>
+					<hr>
 				</div>
 			</div>
 		</div>
