--- a/templates/forum/discussion.html
+++ b/templates/forum/discussion.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %} {% load humanize %} {% load crispy_forms_tags %} {% load markdown %} {% block title %}{{ post.title }}{% endblock %} {% block content %}
+{% extends "base.html" %} 
+{% load humanize %} 
+{% load crispy_forms_tags %} 
+{% load markdown %} 
+{% block title %}{{ post.title }}{% endblock %} {% block content %}
 <div class="container-fluid" style="padding-top: 100px;"></div>
 <div class="container">
     <div class="row">
@@ -75,7 +79,7 @@
             </div>
         </div>
         <div class="col-sm-4">
-            {% include "forum/snippet/sidebar.html" with obj_type=posts obj=post %}
+            {% include "forum/snippet/sidebar.html" with side1=side1 side2=side2 %}
         </div>
     </div>
 </div>
