--- a/templates/forum/start.html
+++ b/templates/forum/start.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 <div class="container-fluid" style="padding-top: 100px;"></div>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-sm-8">
-            <div class="col-sm-8 offset-sm-2">
+            <div class="col-sm-12">
                 <h1 class="h1-responsive">New Discussion</h1>
                 <form method="post">
                     {% csrf_token %} {{ form|crispy }}
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="col-sm-4">
-            {% include "forum/snippet/sidebar.html" with obj_type=posts obj=post %}
+            {% include "forum/snippet/sidebar.html" with side1=side1 side2=side2 %}
         </div>
     </div>
 </div>
