--- a/templates/forum/start.html
+++ b/templates/forum/start.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}New Topic{% endblock %} 
+{% extends 'base.html' %} 
+{% load crispy_forms_tags %} 
+{% block title %}New Discussion | {{ block.super }}{% endblock %} 
 {% block pagecss %} {% endblock %} 
 
 
