--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -47,7 +47,7 @@
                 <!-- <a class="nav-link"><i class="fa fa-envelope"></i> <span class="hidden-sm-down">Contact</span></a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'account_register' %}"><i class="fa fa-sign-in"></i> <span class="hidden-sm-down">Register</span></a>
+                <a class="nav-link" href="{# url 'account_register' #}"><i class="fa fa-sign-in"></i> <span class="hidden-sm-down">Register</span></a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
