--- a/templates/forum/discussion.html
+++ b/templates/forum/discussion.html
@@ -2,7 +2,8 @@
 {% load humanize %} 
 {% load crispy_forms_tags %} 
 {% load markdown %} 
-{% block title %}{{ post.title }}{% endblock %} {% block content %}
+{% block title %}{{ post.title }}{% endblock %} 
+{% block content %}
 <div class="container-fluid" style="padding-top: 100px;"></div>
 <div class="container">
     <div class="row">
@@ -27,11 +28,13 @@
                         </div>
                     </div>
                     {% endif %}
-                    <div class="col-sm-8">
-                        <form method="post" action="">
-                            {% csrf_token %} {{ form|crispy }}
-                            <button type="submit" class="btn btn-default btn-sm">Add Comment</button>
-                        </form>
+                    <div class="container">
+                        <div class="col-sm-12">
+                            <form method="post" action="">
+                                {% csrf_token %} {{ form|crispy }}
+                                <button type="submit" class="btn btn-default btn-sm">Add Comment</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
