--- a/templates/forum/edit_comment.html
+++ b/templates/forum/edit_comment.html
@@ -3,24 +3,24 @@
 {% load crispy_forms_tags %}
 {% load markdown %}
 
-{% block title %}| Edit Comment{% endblock %}
+{% block title %} Edit Comment | {{ block.super }}{% endblock %}
 
 
 
 {% block content %}
-
 
 <div class="container-fluid" style="padding-top: 100px;"></div>
 <div class="container">
 	<h1>Replying to:</h1>
 
 	<div class="row">
-		<div class="col-md-4 col-sm-6">
+		<div class="col-md-8 col-sm-8">
 			<br>
 			<form method="post">
 				{% csrf_token %}
-				{{ form | crispy }}
-				<input type="submit" value="Edit Comment">
+				{{ form|crispy }}
+				<!-- <input type="submit" class="btn btn-default btn-sm" value=""> -->
+				<button type="submit" class="btn btn-default btn-sm">Edit Comment</button>
 			</form>
 			<strong>Preview</strong>
 			<div class="comment-text">
@@ -28,6 +28,9 @@
 			</div>
 			<br>
 		</div>
+		<div class="col-sm-4">
+            {% include "forum/snippet/sidebar.html" with side1=side1 side2=side2 %}
+        </div>
 	</div>
 </div>
 {% endblock %}
