--- a/templates/users/profile_edit.html
+++ b/templates/users/profile_edit.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% load markdown %}
 
-{% block title %}| Edit Comment{% endblock %}
+{% block title %} Update profile | {{ block.super }}{% endblock %}
 
 
 
