--- a/templates/users/profile_edit.html
+++ b/templates/users/profile_edit.html
@@ -12,7 +12,7 @@
 
 <div class="container-fluid" style="padding-top: 100px;"></div>
 <div class="container">
-	<h3>{{ user.username }} update your profile details</h3>
+	<h3>Welcome {{ user.username }}, update your profile details</h3>
         <div class="row">
             <div class="col-md-8 col-sm-8">
                 <div class="card">
