--- a/templates/home/badge.html
+++ b/templates/home/badge.html
@@ -27,16 +27,16 @@
         <div class="card-block">
            
             <!--Name-->
-            <h4 class="card-title"><strong>username: {{ user.username }}</strong></h4>
+            <h4 class="card-title"><strong>Username: {{ user.username }}</strong></h4>
             <!--Description-->
-            <p>Rank: {{ user.rank }}</p>
+            <p>Rank: {{ profile.rank }}</p>
             <p>Email: {{ user.email }}</p>
             <!--Dribbble-->
-            <a class="icons-sm drib-ic"><i class="fa fa-dribbble"> </i></a>
+            <!-- <a class="icons-sm drib-ic"><i class="fa fa-dribbble"> </i></a> -->
             <!--Instagram-->
-            <a class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a>
+            <!-- <a class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a> -->
             <!--Pinterest-->
-            <a class="icons-sm pin-ic"><i class="fa fa-pinterest"> </i></a>
+            <!-- <a class="icons-sm pin-ic"><i class="fa fa-pinterest"> </i></a> -->
 
         </div>
 
