--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -51,11 +51,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fa fa-user"></i> <span class="hidden-sm-down">Profile</span>
+                    <i class="fa fa-user"></i> <span class="hidden-sm-down">My account</span>
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
-                    <a class="dropdown-item" href="#">My account</a>
+                    <a class="dropdown-item" href="{% url 'users:profile_user' %}">Profile</a>
                 </div>
             </li>
             </ul>
