--- a/templates/users/profile_user.html
+++ b/templates/users/profile_user.html
@@ -26,9 +26,9 @@
 			        <!--Avatar-->
 			         <div class="">
 			        {% if profile.image %}
-			            <img src="{{ profile.image.url }}" class="img-fluid img-thumbnail" width="300" height="300" alt="profie.picture">
+			            <img src="{{ profile.image.url }}" class="img-fluid img-thumbnail" width="350" height="300" alt="profie.picture">
 			        {% else %}
-			        	<img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%282%29.jpg" class="img-fluid img-thumbnail" width="300" height="300" alt="profie.picture">    
+			        	<img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%282%29.jpg" class="img-fluid img-thumbnail" width="350" height="300" alt="profie.picture">    
 			        {% endif %}
 			        </div>
 
@@ -36,20 +36,23 @@
 
 
 			            <!--Name-->
-			            <h4 class="card-title"><strong>Name: {{ profile.user.username }}</strong></h4>
+			            <h4 class="card-title"><strong>Username: {{ profile.user.username }}</strong></h4>
 						<!--Description-->
 						<hr>
-						<p>Rank: {{ profile.user.rank }}</p>
+						<p>Rank: {{ profile.rank }}</p>
 						<hr>
 						<p>Points: {{ profile.user.rank }}</p>
 						<hr>
-						<p>Email: {{  profile.user.email }}</p>
+						 <p>Email: {{ profile.user.email }}</p> 
 						<hr>
 						<br>
+						{% if profile.facebook_link or profile.twitter_handle or profile.website_link %}
 						<h4>Connect with {{ profile.user }}</h4>
 						<span><a class="icons-sm fa-ic" href="{{ profile.facebook_link }}"><i class="fa fa-facebook"> </i></a></span>
+						
 						<span><a class="icons-sm tw-ic" href="{{ profile.twitter_handle }}"><i class="fa fa-twitter"> </i></a></span>
-			            <!--Dribbble-->
+						{% endif %}
+						<!--Dribbble-->
 			            <!-- <a class="icons-sm drib-ic"><i class="fa fa-dribbble"> </i></a> -->
 			            <!--Instagram-->
 			            <!-- <a class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a> -->
@@ -99,7 +102,7 @@
 					</div>
 					<div class="card-block">
 						<a href="{{ item.get_absolute_url }}">
-							<h4 class="card-title">{{ item }}</h4>
+							<h4 class="card-title" style="color: black;">{{ item }}</h4>
 						</a>
 						<!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
 						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -111,6 +114,8 @@
 			{% else %}
 				<p>No post yet</p>
 			{% endif %}
+			<br>
+			<br>
 			</div>
 		</div>
 		<hr>
