all auth template override

--- a/templates/home/badge.html
+++ b/templates/home/badge.html
@@ -21,7 +21,7 @@
 
         <!--Avatar-->
         <div class="avatar">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%282%29.jpg" class="img-fluid img-author" width="140" height="140" alt="profie.picture">
+            <img src="http://www.sbsc.in/images/dummy-profile-pic.png" class="img-fluid img-author" width="140" height="140" alt="profie.picture">
         </div>
 
         <div class="card-block">
