--- a/templates/home/home_member.html
+++ b/templates/home/home_member.html
@@ -27,7 +27,7 @@
                             {% if item.image %}
                                 <img src="{{ item.image.url }}" class="img-fluid rounded-circle" width="300" height="300" alt="profie.picture">
                             {% else %}
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%282%29.jpg" class="img-fluid img-thumbnail" width="300" height="300" alt="profie.picture">    
+                                <img src="http://www.sbsc.in/images/dummy-profile-pic.png" class="img-fluid img-thumbnail" width="300" height="300" alt="profie.picture">    
                             {% endif %}                        
                         </div>
 
