--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav smooth-scroll mr-auto">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link waves-effect waves-light" href="#home"><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -29,33 +29,29 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link waves-effect waves-light" href="#contact"></a>
-                </li>
+                </li> -->
             </ul>
-<!--             <ul class="navbar-nav nav-flex-icons">
-                <li class="nav-item">
-                    <a class="nav-link"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link"><i class="fa fa-instagram"></i></a>
-                </li>
-            </ul> -->
             <ul class="navbar-nav nav-flex-icons">
             <li class="nav-item">
                 <!-- <a class="nav-link"><i class="fa fa-envelope"></i> <span class="hidden-sm-down">Contact</span></a> -->
             </li>
+            {% if not request.user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="{# url 'account_register' #}"><i class="fa fa-sign-in"></i> <span class="hidden-sm-down">Register</span></a>
+                <a class="nav-link" href="{% url 'account_signup' %}"><i class="fa fa-sign-in"></i> <span class="hidden-sm-down">Register</span></a>
             </li>
+            {% endif %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-user"></i> <span class="hidden-sm-down">My account</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
+                    {% if not request.user.is_authenticated %}
                     <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                    {% endif %}
+                    {% if request.user.is_authenticated %}
+                    <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                     <a class="dropdown-item" href="{% url 'users:profile_user' %}">Profile</a>
+                    {% endif %}
                 </div>
             </li>
             </ul>
